--- a/style.css
+++ b/style.css
@@ -4,13 +4,13 @@
     box-sizing: border-box;
 }
 
-a {
-    text-decoration: none;
-}
-
 html {
     font-size: 11px;
     font-family: 'Montserrat', sans-serif;
+}
+
+body {
+    background-color: #f2f2f2;
 }
 
 .back-color {
@@ -21,14 +21,10 @@ ul {
     list-style-type: none;
 }
 
-.sosyal li {
-    display: inline-block;
-}
-
 .btn {
     color: white;
-    width: 5rem;
-    height: 5rem;
+    width: 4.7rem;
+    height: 4.7rem;
     font-size: 2.5rem;
     transition: all .5s;
 }
@@ -38,6 +34,15 @@ ul {
     background-color: #fff;
 }
 
-.baslik {
-    font-weight: 700;
+.fs-25rem {
+    font-size: 2.5rem;
+}
+
+.fs-25rem a:hover {
+    text-decoration: none;
+}
+
+.resim-esitleme {
+    height: 35rem;
+    object-fit: cover;
 }
