--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ body {
 }
 
 .back-color {
-    background-color: #2c3e50;
+    background-color: #143c1e;
 }
 
 ul {
@@ -31,18 +31,26 @@ ul {
 
 .btn:hover {
     color: black;
-    background-color: #fff;
 }
 
 .fs-25rem {
     font-size: 2.5rem;
 }
 
-.fs-25rem a:hover {
+.siparis-rem a:hover {
     text-decoration: none;
+    color: black;
 }
 
 .resim-esitleme {
     height: 35rem;
     object-fit: cover;
+}
+
+.resim-esitleme2 {
+    object-fit: cover;
+}
+
+.siparis-rem {
+    font-size: 2rem;
 }
